If the server claims to be GMX ignore the UIDPLUS capability (just like for GMail) as it doesn't report it but apparently implements it.

BUG: 204653

svn path=/trunk/KDE/kdepim/akonadi/; revision=1031567